--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -69,4 +69,24 @@
     <servlet-name>ProductDeleteServlet</servlet-name>
     <url-pattern>/delete</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditProductServlet</display-name>
+    <servlet-name>EditProductServlet</servlet-name>
+    <servlet-class>com.controller.EditProductServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditProductServlet</servlet-name>
+    <url-pattern>/edit</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductUpdateServlet</display-name>
+    <servlet-name>ProductUpdateServlet</servlet-name>
+    <servlet-class>com.controller.ProductUpdateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductUpdateServlet</servlet-name>
+    <url-pattern>/productupdate</url-pattern>
+  </servlet-mapping>
 </web-app>
