--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -89,4 +89,13 @@
     <servlet-name>ProductUpdateServlet</servlet-name>
     <url-pattern>/productupdate</url-pattern>
   </servlet-mapping>
+  <filter>
+    <display-name>CountFilter</display-name>
+    <filter-name>CountFilter</filter-name>
+    <filter-class>com.filter.CountFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CountFilter</filter-name>
+    <url-pattern>*.jsp</url-pattern>
+  </filter-mapping>
 </web-app>
